// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationPicker files app bar cancel button should show the location picker cancel button 1`] = `
<oc-button-stub type="button" size="small" variation="passive" appearance="outline" justifycontent="center" gapsize="medium" id="location-picker-btn-cancel">
  <translate-stub tag="span">Cancel</translate-stub>
</oc-button-stub>
`;

exports[`LocationPicker files app bar should show current hint according to the current route action 1`] = `
<p data-testid="location-picker-current-hint" class="oc-text-muted uk-text-meta">Navigate into the desired folder and copy selected resources into it.
  You can navigate into a folder by clicking on its name.
  To navigate back, you can click on the breadcrumbs.
  Resources will be copied into the folder where you are currently located.</p>
`;

exports[`LocationPicker files app bar should show current hint according to the current route action 2`] = `
<p data-testid="location-picker-current-hint" class="oc-text-muted uk-text-meta">Navigate into the desired folder and move selected resources into it.
  You can navigate into a folder by clicking on its name.
  To navigate back, you can click on the breadcrumbs.
  Resources will be moved into the folder where you are currently located.</p>
`;

exports[`LocationPicker files view when the view is not loading anymore should show no content message if active files length is less than one 1`] = `<no-content-message-stub icon="folder" id="files-location-picker-empty" class="files-empty"></no-content-message-stub>`;

exports[`LocationPicker files view when the view is still loading should show list loader 1`] = `<list-loader-stub></list-loader-stub>`;
